- add test cases for listing viewmodel

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.CryptoTracker"
         tools:targetApi="31">
         <activity
-            android:name="com.tushar.presentation.ui.MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.CryptoTracker">
             <intent-filter>
